# browsertap

./: .gitignore  Cargo.toml  README.md  README_CN.md  browsertap.toml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  config.rs  main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs  state.rs  tls.rs  websocket.rs
crates/shared/: Cargo.toml
crates/shared/src/: codename.rs  lib.rs  protocol.rs  session.rs  token.rs
examples/quickstart/: README.md  index.html  package.json  server.js
runtime/browser/: package-lock.json  package.json  tsconfig.json
runtime/browser/src/: client.ts  index.ts  storage.ts  types.ts
