[workspace]
members = ["crates/shared", "crates/daemon", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/justinhuangcode/browsertap"
homepage = "https://github.com/justinhuangcode/browsertap"
description = "Tap into your live browser. Close the agent loop."
keywords = ["browser", "automation", "cli", "ai-agent", "devtools"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
readme = "README.md"
authors = ["Justin Huang <justinhuangcode@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web / HTTP / WebSocket
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Hyper utilities (for TLS server)
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }

# TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rcgen = "0.13"
rustls-pemfile = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto (HMAC-SHA256 tokens)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures = "0.3"

# Internal crates
browsertap-shared = { version = "0.1.0", path = "crates/shared" }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
