[package]
name = "browsertap-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
authors.workspace = true
description = "CLI for browsertap - tap into your live browser from the command line"

[[bin]]
name = "browsertap"
path = "src/main.rs"

[dependencies]
browsertap-shared = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
