[package]
name = "browsertap-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Daemon process for browsertap - HTTPS + WebSocket hub managing browser sessions"

[[bin]]
name = "browsertapd"
path = "src/main.rs"

[dependencies]
browsertap-shared = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
rcgen = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
