[package]
name = "browsertap-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, token system, and protocol definitions for browsertap"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
